--- a/src/Person/Person.css
+++ b/src/Person/Person.css
@@ -7,8 +7,12 @@
     text-align: center;
 }
 
-/*@media (min-width: 500px) {
+.Person input {
+    width: 60%;
+}
+
+@media (min-width: 500px) {
     .Person {
         width: 450px;
     }
-}*/
+}
